[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
default-run = "prochain"

[badges]
travis-ci = { repository = "paritytech/substrate", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "prochain"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.0.6" }
serde = { version = "1.0.102", features = ["derive"] }
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.2.1"
jsonrpc-core = "14.0.3"
log = "0.4.8"
rand = "0.7.2"
structopt = "=0.3.7"
serde_json = "1.0.41"
hex = "0.4.0"

# primitives
sp-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }
sp-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-inherents = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }

# client dependencies
sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sc-chain-spec = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-network = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sc-consensus-babe = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
grandpa = { version = "0.8", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
sc-client-db = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sc-offchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-basic-authority = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sc-service = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sc-telemetry = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-authority-discovery = { version = "0.8",  git = "https://github.com/ProChain/substrate.git" }

# frame dependencies
pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
pallet-authority-discovery = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git" }

# node-specific dependencies
node-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
tokio = { version = "0.2", features = ["rt-threaded"], optional = true }
sc-cli = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
node-transaction-factory = { version = "0.8.0", optional = true, git = "https://github.com/ProChain/substrate.git" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { git = "https://github.com/ProChain/substrate.git", optional = true }

[dev-dependencies]
sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-consensus-babe = { version = "0.8", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
sc-service-test = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
futures = "0.3.1"
tempfile = "3.1.0"

[build-dependencies]
sc-cli = { version = "0.8.0", package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", git = "https://github.com/ProChain/substrate.git" }
structopt = "=0.3.7"
vergen = "3.0.4"

[features]
default = ["cli", "wasmtime"]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"sc-cli",
	"node-transaction-factory",
	"tokio",
	"ctrlc",
	"sc-service/rocksdb",
	"node-executor/wasmi-errno",
]
wasmtime = [
	"cli",
	"node-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]
