[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-state-machine = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sp-trie = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
trie-root = "0.15.2"

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-grandpa = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-im-online = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
wabt = "0.9.2"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
