[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }

[dev-dependencies]
sp-serializer = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
