[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
jsonrpc-core = "14.0.3"
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
pallet-contracts-rpc = { version = "0.8.0", git = "https://github.com/ProChain/substrate.git" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
