[package]
name = "node-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
harsh = { path = "../harsh", default-features = false }

# primitives
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
node-primitives = { path = "../primitives", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/ProChain/substrate.git", default-features = false }
primitives = { package = "substrate-primitives",  git = "https://github.com/ProChain/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/ProChain/substrate.git", default-features = false }
sr-staking-primitives = { git = "https://github.com/ProChain/substrate.git", default-features = false }

# core dependencies
sr-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
tx-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
version = { package = "sr-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
substrate-keyring = { git = "https://github.com/ProChain/substrate.git", optional = true }
substrate-session = { git = "https://github.com/ProChain/substrate.git", default-features = false }

# srml dependencies
authorship = { package = "srml-authorship", git = "https://github.com/ProChain/substrate.git", default-features = false }
babe = { package = "srml-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/ProChain/substrate.git", default-features = false }
collective = { package = "srml-collective", git = "https://github.com/ProChain/substrate.git", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/ProChain/substrate.git", default-features = false }
contracts-rpc-runtime-api = { package = "srml-contracts-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
democracy = { package = "srml-democracy", git = "https://github.com/ProChain/substrate.git", default-features = false }
elections-phragmen = { package = "srml-elections-phragmen", git = "https://github.com/ProChain/substrate.git", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/ProChain/substrate.git", default-features = false }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/ProChain/substrate.git", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/ProChain/substrate.git", default-features = false }
im-online = { package = "srml-im-online", git = "https://github.com/ProChain/substrate.git", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git", default-features = false }
membership = { package = "srml-membership", git = "https://github.com/ProChain/substrate.git", default-features = false }
nicks = { package = "srml-nicks", git = "https://github.com/ProChain/substrate.git", default-features = false }
offences = { package = "srml-offences", git = "https://github.com/ProChain/substrate.git", default-features = false }
randomness-collective-flip = { package = "srml-randomness-collective-flip", git = "https://github.com/ProChain/substrate.git", default-features = false }
session = { package = "srml-session", git = "https://github.com/ProChain/substrate.git", default-features = false, features = ["historical"] }
staking = { package = "srml-staking", git = "https://github.com/ProChain/substrate.git", default-features = false }
srml-staking-reward-curve = { git = "https://github.com/ProChain/substrate.git"}
sudo = { package = "srml-sudo", git = "https://github.com/ProChain/substrate.git", default-features = false }
support = { package = "srml-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
system = { package = "srml-system", git = "https://github.com/ProChain/substrate.git", default-features = false }
system-rpc-runtime-api = { package = "srml-system-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/substrate.git", default-features = false }
treasury = { package = "srml-treasury", git = "https://github.com/ProChain/substrate.git", default-features = false }
utility = { package = "srml-utility", git = "https://github.com/ProChain/substrate.git", default-features = false }
transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git", default-features = false }
transaction-payment-rpc-runtime-api = { package = "srml-transaction-payment-rpc-runtime-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
app-crypto = { package = "substrate-application-crypto", git = "https://github.com/ProChain/substrate.git", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4", git = "https://github.com/ProChain/substrate.git" }

[features]
default = ["std"]
std = [
	"authorship/std",
	"babe-primitives/std",
	"babe/std",
	"balances/std",
	"sr-api/std",
	"codec/std",
	"collective/std",
	"contracts/std",
	"contracts-rpc-runtime-api/std",
	"democracy/std",
	"elections-phragmen/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"node-primitives/std",
	"offchain-primitives/std",
	"offences/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"rustc-hex",
	"safe-mix/std",
	"serde",
	"session/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"staking/std",
	"substrate-keyring",
	"substrate-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"system-rpc-runtime-api/std",
	"timestamp/std",
	"treasury/std",
	"utility/std",
	"transaction-payment/std",
	"transaction-payment-rpc-runtime-api/std",
	"version/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"inherents/std",
]
