[package]
name = "node-testing"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2018"

[dependencies]
balances = { package = "srml-balances", git = "https://github.com/ProChain/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
contracts = { package = "srml-contracts", git = "https://github.com/ProChain/substrate.git" }
grandpa = { package = "srml-grandpa", git = "https://github.com/ProChain/substrate.git" }
indices = { package = "srml-indices", git = "https://github.com/ProChain/substrate.git" }
keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
node-executor = { path = "../executor" }
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
runtime-io = { package = "sr-io", git = "https://github.com/ProChain/substrate.git" }
sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
runtime_support = { package = "srml-support", git = "https://github.com/ProChain/substrate.git" }
session = { package = "srml-session", git = "https://github.com/ProChain/substrate.git" }
staking = { package = "srml-staking", git = "https://github.com/ProChain/substrate.git" }
substrate-executor = { git = "https://github.com/ProChain/substrate.git" }
system = { package = "srml-system", git = "https://github.com/ProChain/substrate.git" }
test-client = { package = "substrate-test-client", git = "https://github.com/ProChain/substrate.git" }
timestamp = { package = "srml-timestamp", git = "https://github.com/ProChain/substrate.git" }
treasury = { package = "srml-treasury", git = "https://github.com/ProChain/substrate.git" }
transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/ProChain/substrate.git" }
wabt = "0.9.2"
hex-literal = "0.2.1"
